log
Thu, May 15, 2025 10:35:44 AM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025 10:36:09 AM: 
 tests:  0|5
total_score: 0/70
8e7e548
Thu, May 15, 2025 10:36:42 AM: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  2|4
total_score: 15/70
e6d7d86
Thu, May 15, 2025 10:40:30 AM: 
 sudoku.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
f636cc6
Thu, May 15, 2025 11:10:11 AM: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|5
total_score: 0/70
e5edf10
Thu, May 15, 2025 11:18:42 AM: 
 sudoku.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  5|3
total_score: 35/70
1637de3
Thu, May 15, 2025 11:20:48 AM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
ee69d9e
Thu, May 15, 2025 11:22:51 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 35/70
47e44f3
Thu, May 15, 2025 11:32:42 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
6d8bf6b
Thu, May 15, 2025 11:50:08 AM: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
536fcf4
Thu, May 15, 2025 11:55:43 AM: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
824752e
Thu, May 15, 2025 12:09:52 PM: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
e6bc1b1
Thu, May 15, 2025 12:10:40 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0d4fde2
Thu, May 15, 2025 12:12:19 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
f789986
Thu, May 15, 2025 12:13:07 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
8fbf369
Thu, May 15, 2025 12:17:53 PM: 
 sudoku.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  0|0
4df4c47
Thu, May 15, 2025 12:18:37 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
91a2952
Thu, May 15, 2025 12:18:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b7c537
Thu, May 15, 2025 12:22:15 PM: 
 sudoku.c | 22 ++--------------------
 1 file changed, 2 insertions(+), 20 deletions(-)
 tests:  6|2
total_score: 45/70
2a1d331
Thu, May 15, 2025 12:24:54 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
aead6bb
Thu, May 15, 2025 12:29:01 PM: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_final':
sudoku.c:162:27: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  162 |     for(int k = 0 ; k < 9 , k++)
      |                           ^
sudoku.c:162:32: error: expected ';' before ')' token
  162 |     for(int k = 0 ; k < 9 , k++)
      |                                ^
      |                                ;
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
bd7f8b8
Thu, May 15, 2025 12:29:05 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_final':
sudoku.c:162:27: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  162 |     for(int k = 0 ; k < 9 , k++)
      |                           ^
sudoku.c:162:32: error: expected ';' before ')' token
  162 |     for(int k = 0 ; k < 9 , k++)
      |                                ^
      |                                ;
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
b43db78
Thu, May 15, 2025 12:29:37 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
a391b3c
Thu, May 15, 2025 12:30:02 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
92c4ce1
Thu, May 15, 2025 12:30:28 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_final':
sudoku.c:162:27: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  162 |     for(int k = 0 ; k < 9 , k++)
      |                           ^
sudoku.c:162:32: error: expected ';' before ')' token
  162 |     for(int k = 0 ; k < 9 , k++)
      |                                ^
      |                                ;
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
8314e98
Thu, May 15, 2025 12:30:42 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_final':
sudoku.c:162:27: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  162 |     for(int k = 0 ; k < 9 , k++)
      |                           ^
sudoku.c:162:32: error: expected ';' before ')' token
  162 |     for(int k = 0 ; k < 9 , k++)
      |                                ^
      |                                ;
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
bed4330
Thu, May 15, 2025 12:31:14 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
9bf3c50
Thu, May 15, 2025 12:54:24 PM: 
 sudoku.c | 17 +++++++++++++++++ sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|1
total_score: 55/70
 tests:  7|1
9ba2e20
ore: 55/70
9ba2e20
Thu, May 15, 2025 12:58:26 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  7|1
total_score: 55/70
090fc10
Thu, May 15, 2025 12:59:31 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 55/70
6f5d956
Thu, May 15, 2025  1:01:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
3c9ede7
Fri, May 16, 2025  7:51:01 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
d797fbf
Fri, May 16, 2025  7:53:07 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
059250a
Fri, May 16, 2025  7:53:50 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
4f70531
Fri, May 16, 2025  7:55:28 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f6f46ec
Fri, May 16, 2025  8:14:17 PM: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
2a6d459
